--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,7 +3,7 @@
     text-align: right;
 }
 .titPrincipal {
-    padding: 64px;
+    padding: 55px;
 }
 .titSecundario {
     padding: 32px;
@@ -14,6 +14,10 @@
 .rodape {
     text-align: center;
     padding: 32px;
+}
+
+.btMenu {
+    width: 100%;
 }
 
 
